@@ -81,4 +81,4 @@ elif action == 'play':
 
 elif action == 'cache_clear':
     from tulip import cache
-    cache.clear(withyes=False)
+    cache.FunctionCache().reset_cache(True)
